--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,15 @@ repositories {
         name = "papermc-repo"
         url = "https://repo.papermc.io/repository/maven-public/"
     }
+    maven {
+        url = "https://repo.fancyinnovations.com/releases"
+    }
 }
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
     compileOnly("com.sk89q.worldguard:worldguard-bukkit:7.0.14")
+    compileOnly("de.oliver:FancyNpcs:2.7.0")
     implementation("com.github.stefvanschie.inventoryframework:IF:0.11.3")
 }
 
