--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compileOnly("com.sk89q.worldguard:worldguard-bukkit:7.0.14")
     compileOnly("de.oliver:FancyNpcs:2.7.0")
     implementation("com.github.stefvanschie.inventoryframework:IF:0.11.3")
+    implementation("com.zaxxer:HikariCP:5.0.1")
 }
 
 shadowJar {
