--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,17 @@ repositories {
     maven {
         url = "https://repo.fancyinnovations.com/releases"
     }
+
+    maven {
+        url = uri("https://maven.devs.beer/")
+    }
 }
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
     compileOnly("com.sk89q.worldguard:worldguard-bukkit:7.0.14")
     compileOnly("de.oliver:FancyNpcs:2.7.0")
+    compileOnly("dev.lone:api-itemsadder:4.0.10")
     implementation("com.github.stefvanschie.inventoryframework:IF:0.11.3")
     implementation("com.zaxxer:HikariCP:5.0.1")
     implementation("org.projectlombok:lombok:1.18.30")
